-- Generated by Mocodo 4.3.3

CREATE TABLE CHALLENGE (
  PRIMARY KEY (num_defi),
  num_defi        VARCHAR(42) NOT NULL,
  nom             VARCHAR(42),
  description     VARCHAR(42),
  difficulte      VARCHAR(42),
  duree           VARCHAR(42),
  num_jeu         VARCHAR(42) NOT NULL,
  num_utilisateur VARCHAR(42) NOT NULL
);

CREATE TABLE JEU (
  PRIMARY KEY (num_jeu),
  num_jeu     VARCHAR(42) NOT NULL,
  nom         VARCHAR(42),
  description VARCHAR(42)
);

CREATE TABLE PARTICIPATION (
  PRIMARY KEY (num_participation),
  num_participation VARCHAR(42) NOT NULL,
  video_url         VARCHAR(42),
  num_defi          VARCHAR(42) NOT NULL,
  num_utilisateur   VARCHAR(42) NOT NULL
);

CREATE TABLE ROLE (
  PRIMARY KEY (num_role),
  num_role VARCHAR(42) NOT NULL,
  nom      VARCHAR(42)
);

CREATE TABLE UTILISATEUR (
  PRIMARY KEY (num_utilisateur),
  num_utilisateur VARCHAR(42) NOT NULL,
  nom             VARCHAR(42),
  mot_de_passe    VARCHAR(42),
  num_role        VARCHAR(42) NOT NULL
);

CREATE TABLE VOTE_CHALLENGE (
  PRIMARY KEY (num_utilisateur, num_defi),
  num_utilisateur VARCHAR(42) NOT NULL,
  num_defi        VARCHAR(42) NOT NULL
);

CREATE TABLE VOTE_PARTICIPATION (
  PRIMARY KEY (num_utilisateur, num_participation),
  num_utilisateur   VARCHAR(42) NOT NULL,
  num_participation VARCHAR(42) NOT NULL
);

ALTER TABLE CHALLENGE ADD FOREIGN KEY (num_utilisateur) REFERENCES UTILISATEUR (num_utilisateur);
ALTER TABLE CHALLENGE ADD FOREIGN KEY (num_jeu) REFERENCES JEU (num_jeu);

ALTER TABLE PARTICIPATION ADD FOREIGN KEY (num_utilisateur) REFERENCES UTILISATEUR (num_utilisateur);
ALTER TABLE PARTICIPATION ADD FOREIGN KEY (num_defi) REFERENCES CHALLENGE (num_defi);

ALTER TABLE UTILISATEUR ADD FOREIGN KEY (num_role) REFERENCES ROLE (num_role);

ALTER TABLE VOTE_CHALLENGE ADD FOREIGN KEY (num_defi) REFERENCES CHALLENGE (num_defi);
ALTER TABLE VOTE_CHALLENGE ADD FOREIGN KEY (num_utilisateur) REFERENCES UTILISATEUR (num_utilisateur);

ALTER TABLE VOTE_PARTICIPATION ADD FOREIGN KEY (num_participation) REFERENCES PARTICIPATION (num_participation);
ALTER TABLE VOTE_PARTICIPATION ADD FOREIGN KEY (num_utilisateur) REFERENCES UTILISATEUR (num_utilisateur);
