erDiagram
  %% Generated by Mocodo 4.3.3
  CHALLENGE {
    TYPE num_defi PK
    TYPE nom
    TYPE description
    TYPE difficulte
    TYPE duree
  }
  JEU {
    TYPE num_jeu PK
    TYPE nom
    TYPE description
  }
  PARTICIPATION {
    TYPE num_participation PK
    TYPE video_url
  }
  UTILISATEUR {
    TYPE num_utilisateur PK
    TYPE nom
    TYPE mot_de_passe
  }
  ROLE {
    TYPE num_role PK
    TYPE nom
  }
  CHALLENGE ||--o{ PARTICIPATION: GENERE
  CHALLENGE }o--|| JEU: CONCERNE
  UTILISATEUR }o--o{ PARTICIPATION: VOTE_PARTICIPATION
  UTILISATEUR }o--o{ CHALLENGE: VOTE_CHALLENGE
  UTILISATEUR ||--o{ CHALLENGE: CREER
  UTILISATEUR }o--|| ROLE: ACQUIERT
  UTILISATEUR ||--o{ PARTICIPATION: DEPOSE
